2003-02-19	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added support for a few xterm character attributes.
    
    * Tabs are dragged only after about 8 pixels to prevent 
      accidental dragging.
    

2003-02-16	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Changed implementation of cursorToX: Y: and 
      cursorToX: in VT100Screen. Was interfering 
      with resize command.
      

2003-02-14	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed encoding bug in PTYsession: -keyDown:
    
    * Workaround for a possible Cocoa bug in copy/paste.
    
    * Changed keyboard shortcuts to navigate sessions 
      from Cmd-1/2 to Cmd [ and Cmd ].
      
      
2003-02-13	fabian
    * Enhanced text input
    * Incorporated Japanese patch from OHKAWA
    
2003-02-12	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added preference to remap DELETE key to BACKSPACE.
    

2003-02-11	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Moved dead key code from PTYSession: -keyDown to 
      PTYTextView: -keyDown since that implements the 
      NSTextInput protocol.
      
    * Fixed a minor problem in VT100Screen: scrollUp 
      where an unwanted "\n" was inserted when 
      CURSOR_Y > SCROLL_BOTTOM.
      
    * Made flag to open session in new window in the toolbar 
      popup menu sticky.
      
    * Added GPL notice to all files.
      

2003-02-10	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added support for alternate keypad mode and 
      PF1, PF2, PF3, PF4 keys.
      
    * Fixed a bug in VT100Terminal: getCSIParam() 
      where the the paramters would be parsed into 
      incorrect array indices when blank (implied) 
      parameters were encountered. This is was messing 
      up some token processing where the position of 
      the parameters in the array was important like 
      [VT100Screen: -setTopBottom].
      
    * Fixed a cursor display bug in PseudoTerminal: -windowConfigOk.
      

2003-02-10	fabian
    * Cleaned up showCursor code